--- a/res/layout/accounts.xml
+++ b/res/layout/accounts.xml
@@ -13,4 +13,5 @@
 
 
 
+<TextView android:id="@android:id/empty" android:textSize="24px" android:text="Use the menu to add new accounts." android:gravity="center" android:layout_height="fill_parent" android:layout_width="fill_parent"></TextView>
 </LinearLayout>
