--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
 <PreferenceScreen android:summary="About Loot, contact info, etc." android:title="About">
-<intent android:action="android.intent.action.VIEW" android:data="http://www.android.com" />
+<intent android:action="android.intent.action.VIEW" android:data="http://gumbercules.net/loot/about.html"/>
 </PreferenceScreen><PreferenceCategory android:title="Security" android:key="cat_security">
 <CheckBoxPreference android:key="security" android:title="Security" android:summary="Use a PIN to access accounts" android:defaultValue="false" android:disableDependentsState="false"></CheckBoxPreference><EditTextPreference android:dialogTitle="PIN" android:dialogMessage="Enter new PIN" android:summary="Password to access accounts" android:title="PIN" android:key="pin" android:positiveButtonText="Set" android:negativeButtonText="Cancel" android:defaultValue="0000" android:dependency="security"></EditTextPreference></PreferenceCategory>
 <PreferenceCategory android:title="Transaction Purging" android:key="cat_purge"><CheckBoxPreference android:key="purge" android:title="Auto Purge" android:defaultValue="false" android:disableDependentsState="false" android:summary="Automatically purge posted transactions"></CheckBoxPreference><EditTextPreference android:dialogTitle="Auto Purge" android:dialogMessage="Purge posted transactions after how many days?" android:key="purge_days" android:positiveButtonText="Set" android:negativeButtonText="Cancel" android:defaultValue="90" android:dependency="purge" android:summary="Number of days before purging" android:title="Purge Days"></EditTextPreference></PreferenceCategory>
